--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@
     padding: 0;
 }
 body {
-    background-color: black;
+    background-color: silver;
     margin: 0 20%;
     font-family: 'Poppins', Arial, sans-serif;
     color: white;
 }
+
+/* HEADER */
+.
+
+
 
 .body {
     width: 100%;
@@ -63,24 +68,6 @@ body {
 
 
 
-/* Resume Title */
-
-/* .resume_section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid white;
-}
-
-.header_section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid white;
-} */
-
-
 /* EDUCATION */
 
 /* education title */
@@ -90,6 +77,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 30px 0;
+    flex-wrap: wrap;
 }
 
 
@@ -115,6 +103,7 @@ body {
     justify-content: space-around;
     justify-items: center;
     place-content: center;
+    flex-wrap: wrap;
 }
 
 .education_item {
@@ -140,7 +129,7 @@ body {
 .course {
     display: flex;
     flex-direction: column;
-    margin: 30px 0;
+    margin: 30px 30px;
 }
 
 .course_content {
@@ -148,4 +137,14 @@ body {
     width: 100%;
     grid-template-columns: 2fr 2fr;
     grid-gap: 20px;
+    place-content: center;
+}
+
+.course_item {
+    display: grid;
+    list-style: none;
+    background-color: black;
+    border-radius: 5px;
+    text-align: center;
+    padding: 40px;
 }
