--- a/style.css
+++ b/style.css
@@ -11,7 +11,18 @@ body {
 }
 
 /* HEADER */
-.
+.social_container{
+    display: flex;
+    width: 100%;
+}
+
+.social_list {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 
 
 
