--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
     padding: 0;
 }
 body {
-    background-color: black;
-    margin: 0 20%;
+    background-color: black; 
     font-family: 'Poppins', Arial, sans-serif;
     color: white;
 }
 
-.show{ 
-    display: grid;
+.body_container {
+    margin: 0 20%;
 }
 
 
@@ -43,7 +42,7 @@ body {
 
 .intro {
     width: 100%;
-    height: 90vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid white;
@@ -101,6 +100,9 @@ body {
     flex-direction: column;
     margin: 30px 0;
     flex-wrap: wrap;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -183,6 +185,8 @@ body {
     width: 24px;
     height: 24px;
     margin: 10px;
+    background-color: white;
+    border-radius: 5px;
     
 }
 
@@ -193,4 +197,6 @@ body {
     flex-direction: row;
     align-items: center;
     padding: 5px 10px;
+    text-decoration: none;
+    color: white;
 }
