--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,13 @@
 
+/* EXPERIENCE SECTION */
 
 .experience {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 30px;
+    min-height: 100vh;
+    flex-wrap: wrap;
 }
 
 .exp_content {
@@ -91,4 +94,57 @@
 .exp_info_dropdown.show {
     display: grid;
     transition: 0.5s ease-in;
+}
+
+
+/* project content section */
+
+.project_content {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;  
+    place-content: center;
+   
+}
+
+.project_items {
+    border: 1px solid white;
+    border-radius: 5px;
+    min-height: 15vh;
+    text-decoration: none;
+    text-align: center;
+    position: relative;
+    margin: 0 20px ;
+}
+
+
+.project_items img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+.span-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(145,209,237);
+    background: linear-gradient(90deg, rgba(145,209,237,1) 5%, rgba(78,148,213,1) 19%, rgba(0,212,255,0) 61%);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.project_items span{
+    color: white;
+    
+}
+
+@keyframes slide {
+    from {
+        opacity: 1;
+    }
 }
