--- a/style3.css
+++ b/style3.css
@@ -4,8 +4,49 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: black;
+    background: rgb(145,209,237);
+    background: linear-gradient(90deg, rgba(145,209,237,1) 5%, rgba(78,148,213,1) 70%, rgba(0,212,255,0) 99%, rgba(0,212,255,0) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+.input-name-section {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 10px;
+    
+}
+
+.input-name-section button {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #1a3a57;
+    color: white;
+    font: 15px;
+    font-weight: bold;
+    border: 0;
+}
+.input-name-section input {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid black;
+    color: black;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+.userWarning {
+    color: red;
+    display: none;
+}
+
+.userWarning.show{
+    display: contents;
+}
+
+
+
