--- a/style2.css
+++ b/style2.css
@@ -2,12 +2,15 @@
 /* EXPERIENCE SECTION */
 
 .experience {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin: 30px;
-    min-height: 100vh;
+    margin: 30px 0;
     flex-wrap: wrap;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid white;
 }
 
 .exp_content {
