--- a/style3.css
+++ b/style3.css
@@ -95,3 +95,20 @@ textarea:focus, input:focus{
     text-decoration: none;
 }
 
+
+
+@keyframes appear {
+    from {
+        opacity: 0;
+        translateY: (-10rem);
+    }to {
+        opacity: 1;
+        translateY: (0px);
+    }
+}
+.education_content, .education_item, .course_content, .course_item, .exp_content, .exp_item{
+    animation: appear 5s linear;
+    animation-timeline: view();
+    animation-range: entry 0 cover 20%;
+
+} 
