--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +9,11 @@
 body {
     background-color: black; 
     font-family: 'Poppins', Arial, sans-serif;
+    color: white;
+}
+
+a{
+    text-decoration: none;
     color: white;
 }
 
@@ -104,6 +110,7 @@ body {
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid white;
+    gap: 4vh;
 }
 
 
