--- a/style3.css
+++ b/style3.css
@@ -112,3 +112,62 @@ textarea:focus, input:focus{
     animation-range: entry 0 cover 20%;
 
 } 
+
+
+footer {
+    width: 100%;
+    min-height: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* FORM */
+
+.get-contact {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+} 
+
+.get-contact-form {
+    display: flex;
+
+    gap: 30px;    
+    flex-direction: column;
+    justify-content: flex-start;
+
+    width: 100%;
+
+    
+}
+
+.get-contact-form input, .get-contact-form textarea {
+    width: 50%;
+    min-height: 4vh;
+
+    border: 0;
+    border-bottom: 1px solid white;
+
+    padding-left: 20px;
+    background-color: transparent;
+    color: white;
+}
+  
+.get-contact-form select {
+    width: 50%;
+    min-height: 4vh;
+
+    border-radius: 10px;
+}
+
+.get-contact-form button {
+
+    min-height: 4vh;
+    min-width: 4rem;
+
+    border-radius: 5px;
+}
